# Research_Paper_Agent

./: CLAUDE.md  GEMINI.md  README.md  ingest.py  main.py  pyproject.toml
.agents/: AGENTS.md
docs/: 00_project_overview.md  01_plan_of_action.md  02_learning_concepts.md  03_file_structure.md  04_pdf_splitting_strategies.md  05_ingest_pipeline_integration.md
reference/: loader.py  splitter.py
